# srp

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yml
docs/: CMakeLists.txt  examples.dox  groups.dox  overview.md
examples/: 01_colored_triangle.c  02_spinning_triangle.c  03_textured_cube.c  04_utah_teapot.c  CMakeLists.txt
examples/01_colored_triangle/: CMakeLists.txt  main.c
examples/02_spinning_triangle/: CMakeLists.txt  main.c
examples/03_spinning_textured_cube/: CMakeLists.txt  main.c
examples/04_utah_teapot/: CMakeLists.txt  main.c
examples/res/: license.txt
examples/utility/: CMakeLists.txt  framelimiter.c  framelimiter.h  objparser.c  objparser.h  rad.h  window.c  window.h
include/: buffer.h  color.h  context.h  framebuffer.h  vec.h
include/srp/: arena.h  buffer.h  color.h  context.h  framebuffer.h  mat.h  message_callback.h  shaders.h  srp.h  texture.h  type.h  vec.h  vertex.h
src/: CMakeLists.txt  arena.c  arena_p.h  buffer.c  buffer_p.h  context.c  draw.c  draw.h  fixed_point.h  fragment.c  fragment.h  framebuffer.c  framebuffer_p.h  line.c  line.h  point.c  point.h  primitive_assembly.c  primitive_assembly.h  texture.c  texture_p.h  topology.c  topology.h  triangle.c  triangle.h  utils.h  vec.c  vec_p.h  vertex_processing.c  vertex_processing.h
src/core/: buffer.c  buffer_p.h  color.c  color_p.h  context.c  framebuffer.c  framebuffer_p.h  texture.c  texture_p.h
src/math/: mat.c  utils.h  vec.c
src/memory/: alloc.c  alloc.h  arena.c  arena_p.h
src/pipeline/: clipping.c  clipping.h  draw.c  draw.h  interpolation.c  interpolation.h  primitive_assembly.c  primitive_assembly.h  topology.c  topology.h  vertex_processing.c  vertex_processing.h
src/raster/: fragment.c  fragment.h  line.c  line.h  point.c  point.h  triangle.c  triangle.h
src/utils/: defines.h  message_callback.c  message_callback_p.h  stb_image.c  type.c  type_p.h  voidptr.h
tests/: CMakeLists.txt  compare.py  gen_ref.py
tests/scenes/: clipping.c  order_independence.c  perspective_interpolation.c  points.c  rasterization_rules.c  wireframe.c
tests/scenes/clipping/: line.c  point.c  triangle.c  triangle_clipping.c
tests/scenes/interpolation/: affine.c  flat.c  perspective.c
tests/scenes/misc/: depth_test.c  perspective_interpolation.c  rasterization_rules.c  scissor_test.c  stencil_test.c
tests/scenes/polygon_modes/: line.c  point.c
tests/scenes/primitives/: line_loop.c  line_strip.c  lines.c  points.c  triangle_fan.c  triangle_strip.c
tests/utils/: save.c  save.h
